# docx-compare

./: .dockerignore  .editorconfig  .env.e2e  .env.e2e.example  .env.e2e.ui  .env.example  .gitignore  .taskin.json  .tool-versions  API_DOCUMENTATION.md  CHANGELOG.md  DEPLOY.md  DEPLOYMENT.md  DRY_RUN_DOCUMENTATION.md  Dockerfile  Dockerfile.fullstack  Dockerfile.uv  FERRAMENTAS_VERIFICACAO.md  IMPLEMENTACAO_CONTEUDO_TAGS.md  Makefile  README.md  REFATORACAO_MODULO_COMUM.md  TESTE_CONTRATO_VIGENCIA_SUMMARY.md  WEBHOOKS_DIAGRAMS.md  WEBHOOKS_DIRECTUS.md  analisar_dados_brutos.py  analisar_dados_brutos_v2.py  api_complete.py  api_server.py  api_server_working.py  api_simple.py  config.py  debug_campos.py  debug_loop.py  debug_modificacao_status.py  debug_permissoes.py  debug_query_agrupamento.py  debug_versoes.py  deploy-caprover.sh  diff_output.html  (+49 more)
TASK/: task-001-agrupamento-posicional-modificacoes.md  task-003-corrigir-vinculacao-100-modificacoes-clausulas.md  task-005-persistir-dados-vinculacao.md  task-006-corrigir-categorizacao-ast-remocao-insercao.md  task-007-normalizar-case-similaridade-ast.md
TASKS/: README.md  TASK_016_IMPLEMENTACAO_COMPLETA.md  task-001-agrupamento-posicional-modificacoes.md  task-002-integrar-processamento-tags.md  task-003-corrigir-vinculacao-100-modificacoes-clausulas.md  task-004-view-exibir-dados-directus.md  task-005-persistir-dados-vinculacao.md  task-006-corrigir-categorizacao-ast-remocao-insercao.md  task-007-normalizar-case-similaridade-ast.md  task-008-adicionar-status-processando.md  task-009-criar-importador-de-modelo-de-contrato.md  task-009-gerar-clausulas-no-processamento-durante-o-processamento-modelo.md  task-010-processamento-de-versoes-nao-esta-relacionadno-a-claulua-a-modificacao.md  task-011-testes-e2e-interface-usuario-validacao-vinculacao-clausulas.md  task-012-modificacao-do-tipo-insercao-nao-estao-sendo-associada-a-clausula.md  task-013-otimizar-docker-build-versiona-ai.md  task-014-validar-existencia-clausula-antes-vinculacao.md  task-015-falha-ao-gravar-do-processamento-de-versao-no-directus.md  task-016-sistema-nao-detecta-alteracoes-dentro-clausulas.md  task-017-modo-semantico-agrupamento-modificacoes.md
config/: __init__.py  comments_html_filter_direct.lua  directus-schema.json  gunicorn.conf.py  wsgi.py  (+3 more)
versiona-ai/tests/e2e_ui/: Dockerfile.ui-test  IMPLEMENTACAO.md  QUICKSTART.md  README.md  README_DIFF_VISUALIZER.md  __IMPLEMENTATION_SUMMARY.md  conftest.py  criar_versao_teste.py  extrair_dados_producao.py  pyproject.toml  run-tests.sh  seed_directus_e2e.py  test_diff_visualizer.py  test_sdk_validacoes_dados.py  test_ui_directus_login.py  test_ui_processar_versao.py  test_ui_visualizar_modificacoes.py  vincular_modificacoes.py
versiona-ai/tests/e2e_ui/seed/: 01-schema.sql  02-modelo-contrato.sql  03-usuarios.sql
versiona-ai/tests/e2e_ui/uploads/: README.md  exemplo-teste.txt
(+433 files in other folders)
